--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(hw2)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(hw2 main.cpp)
+add_executable(hw2 main.cpp defines.h bank.cpp ATMs.cpp account.cpp account.h)
